--- a/style.css
+++ b/style.css
@@ -257,103 +257,7 @@ body{
 
 /* PHONE */
 
-@media (max-width:500px){
 
-body{
-    margin: 0;
-    width: 100%;
-}
-      
-
-.bar{
-font-size: 10px;
-}
-
-.main{
-    grid-template-columns: 33vw 33vw 33vw;
-
-}
-
-.player1,
-.player2{
-    font-size: 20px;
-}
-
-.check1,
-.check2{
-    display: none;
-}
-
-.total1,
-.total2{
-    font-size: 20px;
-}
-.winner1,
-.winner2{
-    font-size: 12px;
-    margin-left: 30px;
-    width: 10ch;
-}
-
-
-.score1Box,
-.score2Box{
-    margin-left: 15%;
-    padding: 10px 40px;
-    margin-top: 200%;
-}
-.currentScore1,
-.currentScore2{
-    font-size: 15px;
-}
-
-.currentScoreOf1,
-.currentScoreOf2{
-    font-size: 20px;
-}
-
-
-
-/* MIDDLE */
-
-
-.mid p {
-    font-size: 13px;
-    font-weight: bold;
-    
-}
-
-.target{
-    width: 60px;
-    margin-bottom: 10px;
-
-}
-.start{
-    margin-left: 30%;
-    padding: 5px 10px;
-    width: 60px;
-}
-
-.firstDice,
-.secondDice{
-    width: 50px;
-    height: 50px;
-    margin-left: 30%
-}
-
-.roll,
-.hold ,
-.reset{
-    margin-left: 30%;
-    padding: 5px 10px;
-    width: 60px;
-}
-
-.roll ,
-.hold{
-    margin-bottom: 10px
-}
-}
 
 /* IPAD */
 
@@ -462,3 +366,101 @@ font-size: 10px;
 
 
 }
+
+
+@media (max-width:  500px) {
+
+    body{
+        margin: 0;
+        width: 100%;
+    }
+          
+    
+    .bar{
+    font-size: 20px;
+    }
+    
+    .main{
+        grid-template-columns: 33vw 33vw 33vw;
+    
+    }
+    
+    .player1,
+    .player2{
+        font-size: 20px;
+    }
+    
+    .check1,
+    .check2{
+        display: none;
+    }
+    
+    .total1,
+    .total2{
+        font-size: 20px;
+    }
+    .winner1,
+    .winner2{
+        font-size: 12px;
+        margin-left: 30px;
+        width: 10ch;
+    }
+    
+    
+    .score1Box,
+    .score2Box{
+        margin-left: 15%;
+        padding: 10px 40px;
+        margin-top: 200%;
+    }
+    .currentScore1,
+    .currentScore2{
+        font-size: 15px;
+    }
+    
+    .currentScoreOf1,
+    .currentScoreOf2{
+        font-size: 20px;
+    }
+    
+    
+    
+    /* MIDDLE */
+    
+    
+    .mid p {
+        font-size: 13px;
+        font-weight: bold;
+        
+    }
+    
+    .target{
+        width: 60px;
+        margin-bottom: 10px;
+        
+    
+    }
+  
+    
+    .firstDice,
+    .secondDice{
+        width: 50px;
+        height: 50px;
+        margin-left: 32%
+    }
+
+    .start,
+    .roll,
+    .hold ,
+    .reset{
+        margin-left: 30%;
+        padding: 5px 10px;
+        width: 60px;
+        font-size: 13px;
+    }
+    
+    .roll ,
+    .hold{
+        margin-bottom: 30px
+    }
+    }
