--- a/style.css
+++ b/style.css
@@ -6,21 +6,28 @@
 }
 
 body{
+    background-color: gray;
+}
+main{
     margin: 0 300px;
     width: 70%;
     height: 900px;
-    background-color: gray;
 }
 
+.rules{
+    width: 30ch;
+}
 .bar{
     background-color: darkgoldenrod;
-    width: 100%;
+    width: 70%;
     height: 100px;
     display: flex;
     justify-content: center;
     align-items: center;
     font-size: 2.5rem;
     font-weight: 600;
+    margin-left: 300px;
+    
 }
 
 .main{
@@ -273,7 +280,7 @@ body{
 
 @media (max-width: 769px){
 
-    body{
+    main{
         margin: 0;
         width: 100%;
     }
@@ -281,6 +288,8 @@ body{
     
     .bar{
     font-size: 30px;
+    margin: 0;
+    width: 100%;
     }
     
     .main{
@@ -375,7 +384,7 @@ body{
 
 @media (max-width:  500px) {
 
-    body{
+    main{
         margin: 0;
         width: 100%;
     }
@@ -383,10 +392,12 @@ body{
     
     .bar{
     font-size: 20px;
+    margin: 0;
+    width: 100%;
     }
     
     .main{
-        grid-template-columns: 33vw 33vw 33vw;
+        grid-template-columns: 33vw 33vw 34vw;
     
     }
     
