--- a/style.css
+++ b/style.css
@@ -6,26 +6,21 @@
 }
 
 body{
-    background-color: gray;
-}
-main{
     margin: 0 300px;
     width: 70%;
     height: 900px;
+    background-color: gray;
 }
-
 
 .bar{
     background-color: darkgoldenrod;
-    width: 70%;
+    width: 100%;
     height: 100px;
     display: flex;
     justify-content: center;
     align-items: center;
     font-size: 2.5rem;
     font-weight: 600;
-    margin-left: 300px;
-    
 }
 
 .main{
@@ -278,7 +273,7 @@ main{
 
 @media (max-width: 769px){
 
-    main{
+    body{
         margin: 0;
         width: 100%;
     }
@@ -286,8 +281,6 @@ main{
     
     .bar{
     font-size: 30px;
-    margin: 0;
-    width: 100%;
     }
     
     .main{
@@ -382,7 +375,7 @@ main{
 
 @media (max-width:  500px) {
 
-    main{
+    body{
         margin: 0;
         width: 100%;
     }
@@ -390,12 +383,10 @@ main{
     
     .bar{
     font-size: 20px;
-    margin: 0;
-    width: 100%;
     }
     
     .main{
-        grid-template-columns: 33vw 33vw 34vw;
+        grid-template-columns: 33vw 33vw 33vw;
     
     }
     
