--- a/style.css
+++ b/style.css
@@ -417,8 +417,9 @@ body{
 
 }
 
+    /* PHONE */
 
-@media (max-width:  500px) {
+    @media (max-width:  500px) {    
 
     body{
         margin: 0;
